[package]
name = "quic_transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.9"
rustls = { version = "0.20", features = ["dangerous_configuration", "quic"]}
rustls-pemfile = "1"
rcgen = "0.9"
tokio = {version = "1", features = ["full"]}
futures-util = "0.3"